--- a/css/styles.css
+++ b/css/styles.css
@@ -3,9 +3,6 @@
   padding: 0;
 }
 
-body {
-  background-color: bisque;
-}
 
 html {
   font-size: 62.5%;
@@ -66,7 +63,7 @@ ul {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content:stretch;
   position: sticky;
 }
 
@@ -103,7 +100,7 @@ form {
   padding: 300px;
   margin-top: 50px;
 
- }
+}
 
 .card_texto {
   font-family: "Montserrat";
@@ -159,10 +156,15 @@ footer{
 
 
 body {
+  background: rgb(2,0,36);
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(255,229,196,1) 70%, rgba(0,212,255,1) 100%);
   display: flex;
   height: 100vh;
   flex-direction: column;
-  padding: 1em;}
+  padding: 1em;
+  align-items: center;
+}
+
 
   .grid_productos {  
     display: grid;
@@ -191,51 +193,25 @@ body {
 
 @media screen and (min-width: 576px) {
   .grid_productos { display: grid;
-    grid-template-columns: repeat(2, 3fr); }
+  grid-template-columns: repeat(2, 3fr); }
   body {  background-color: red; }
   h1 {font-size: 90px;}
   }
 
 
 #grid_nosotros {
+  align-items: center;
+  display: flex;
+  justify-content: center;
   display:grid;
   grid-template-areas:
   "nav foto foto"
   "nav descripcion descripcion";
-  grid-template-columns: 1fr 1fr;
-justify-content: center;}
+  grid-template-columns: 1fr 1fr;}
 
-.imagen_qs {
-  grid-area: foto;
-  }
+.foto { grid-area: foto;}
 
-p {
-  grid-area: descripcion;     
-  }
-
-.imagen_qs {
-  object-fit: cover;
-  width: 100%;
-  max-height: 100%;
-}
-
-#grid_contacto {
-  display: grid; 
-  grid-template-columns: 1fr 2fr; 
-  grid-template-rows: 3fr; 
-  gap: 0px 0px; 
-  grid-template-areas: 
-    "nav texto texto"
-    "nav formulario formulario";
-}
-
-form {
-  grid-area: formulario ;
-}
-
-div {
-  grid-area: texto;
-}
+.card {grid-area: descripcion;}
 
 .flex_envios {
   display: flex;
@@ -244,7 +220,41 @@ div {
   align-items: center;
 }
 
+iframe:hover { transform: scale(2); }
+
+.navegacion li:hover {
+  background-color:rgba(0,212,255,1);
+  padding: 10px 20 px;
+}
+
+input {
+  transition: all 0.5s;
+}
+
+input:focus {
+  width: 300px;
+  font-size: 20px;
+}
+
+textarea {
+  transition: all 0.5s;
+}
+
+textarea:focus {
+  width: 300px;
+  font-size: 20px;
+}
+
+.flex_contacto {
+  display: flex;
+  flex-direction: column;
+  justify-content: stretch;
+  align-items: center;
+}
+
 @media screen and (min-width: 768px) {
   body {  background-color: #000000; }
   h1 {font-size: 90px;}
   }
+
+
