--- a/IDEA_KARPINSKI/css/styles.css
+++ b/IDEA_KARPINSKI/css/styles.css
@@ -30,8 +30,7 @@ header {
 }
 
 section div {
-  height: 200px;
-  width: 200px;
+
   font-family: "Montserrat";
   font-size: 3rem;
   text-align: center;
@@ -229,7 +228,7 @@ input {
 
 input:focus {
   width: 300px;
-  font-size: 20px;
+  font-size: 3rem;
 }
 
 textarea {
@@ -238,7 +237,7 @@ textarea {
 
 textarea:focus {
   width: 300px;
-  font-size: 20px;
+  font-size: 3rem;
 }
 
 /*.flex_contacto {
@@ -259,10 +258,39 @@ textarea:focus {
   padding-top: 10px;
 }
 
+body, html {
+  height: 100%;
+}
+
+.background {
+  background-image: url("../IMAGES/jan-antonin-kolar-HB26V8IRL2k-unsplash.jpg");
+  background-size: cover;
+  height: 100vh;
+  width: 100vh;
+  position: relative;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  
+}
+
+.tarjeta1 
+{ display: flex;
+  position: absolute;
+  top: 60px;
+  left: 80px;
+  flex-direction: column;
+  justify-content: stretch;
+  align-items: center;
+  z-index: 2;
+}
+
+
 
 @media screen and (min-width: 768px) {
   body {  background-color: #000000; }
   h1 {font-size: 90px;}
   }
+  
 
 
