--- a/IDEA_KARPINSKI/css/styles.css
+++ b/IDEA_KARPINSKI/css/styles.css
@@ -1,296 +1,6 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
-
-html {
-  font-size: 62.5%;
-}
-
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: sticky;
-  top: 0;
-}
-
-
-.titulo {
-  font-family: "Advent Pro";
-  font-size: 8rem;
-  text-align: center;
-}
-
-.footer {
-  font-family: "Montserrat";
-  font-size: 1rem;
-  text-align: center;
-}
-
-section div {
-
-  font-family: "Montserrat";
-  font-size: 3rem;
-  text-align: center;
-}
-
-.titulo {
-  display: flex;
-  color: rgb(20, 20, 82);
-  font-size: 8rem;
-  text-align: center;
-  flex-direction: column;
-}
-
-section div p {
-  background-color: azure;
-  font-size: 3rem;
-}
-
-ul {
-  list-style-type: none;
-  font-size: 4rem;
-  font-family: "Montserrat";
-  background-color: rgba(255, 198, 43, 0.637);
-  padding: 10px 10px 10px 10px;
-  top: 3px;
-  z-index: 1;
-}
-
-/*.navegacion {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content:stretch;
-  position: sticky;
-}*/
-
-a {
-  text-decoration: none;
-  font-family: "Montserrat";
-  font-size: 2rem;
-  line-height: 0.5;
-}
-
-form {
-  font-size: 3rem;
-  font-family: "Montserrat";
-}
-
-card_t {
-  display: flex;
-  flex-direction: column;
-  align-content: stretch;
-  justify-content:center;
-  width: 60%;
-  height: 550px;
-  margin: 0 auto auto auto;
-  padding: 100px 160px;
-  overflow: hidden;
-  border: solid 4px rgb(9, 9, 136);
-}
-
-.card-flex {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  height: 60%;
-  padding: 300px;
-  margin-top: 50px;
-
-}
-
-.card_texto {
-  font-family: "Montserrat";
-  font-size: 2rem;
-  line-height: 100%;
-  margin-top: 3px;
-  text-align: center;
-}
-
-h2 {
-  font-size: 3rem;
-  text-align: center;
-  margin-bottom: 30px;
-}
-
-button {
-
-  font-family: "Montserrat";
-  font-size: 2rem;
-
-}
-
-/*.navegacion {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-content: center;
-}*/
-
-nav {
-  padding: 3px;
-  margin: 3px;
-  margin-left: 3px;
-}
-
-nav li a {
-  color: black;
-  display: block;
-  text-decoration: none;
-  padding: 1em 2em;
-}
-
-
-footer{
-  flex:1;
-  padding: 3rem;
-  margin: 3px;}
-
-
+@import url("https://fonts.googleapis.com/css2?family=Alegreya + Sans + SC:wght@400;500;800");
 body {
-  background: rgb(2,0,36);
-  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(255,229,196,1) 70%, rgba(0,212,255,1) 100%);
-  display: flex;
-  height: 100vh;
-  flex-direction: column;
-  padding: 1em;
-  align-items: center;
-}
+  color: yellow; }
 
-
-/*.grid_productos {  
-    display: grid;
-    width: 100%;
-    grid-template-areas:
-      "nav titulo1 titulo2"
-      "nav foto1 foto2"
-      "nav descripcion1 descripcion2";
-      grid-template-columns: 5fr 5fr;
-      grid-template-rows: 0.5fr 4fr 0.5fr 0.5fr;
-      gap: 5px;
-  }
-  
-  .foto1 { grid-area: foto1; }
-  
-  .foto2 { grid-area: foto2; }
-  
-  .titulo1 { grid-area: titulo1; }
-  
-  .titulo2 { grid-area: titulo2; }
-  
-  .descripcion1 { grid-area: descripcion1; }
-  
-  .descripcion2 { grid-area: descripcion2; }
-*/
-
-@media screen and (min-width: 576px) {
-  .grid_productos { display: grid;
-  grid-template-columns: repeat(2, 3fr); }
-  body {  background-color: red; }
-  h1 {font-size: 90px;}
-  }
-
-
-/*#grid_nosotros {
-  align-items: center;
-  display: flex;
-  justify-content: center;
-  display:grid;
-  grid-template-areas:
-  "nav foto foto"
-  "nav descripcion descripcion";
-  grid-template-columns: 1fr 1fr;}
-
-.foto { grid-area: foto;}
-
-.card {grid-area: descripcion;} */
-
-.flex_envios {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-iframe:hover { transform: scale(2); }
-
-.navegacion li:hover {
-  background-color:rgba(0,212,255,1);
-  padding: 20px 30 px;
-}
-
-input {
-  transition: all 0.5s;
-}
-
-input:focus {
-  width: 300px;
-  font-size: 3rem;
-}
-
-textarea {
-  transition: all 0.5s;
-}
-
-textarea:focus {
-  width: 300px;
-  font-size: 3rem;
-}
-
-/*.flex_contacto {
-  display: flex;
-  flex-direction: column;
-  justify-content: stretch;
-  align-items: center;
-}*/
-
-.card-img-top {
-  width: 100%;
-  height: 15vw;
-  object-fit: contain;
-}
-
-
-.formulario {
-  padding-top: 10px;
-}
-
-body, html {
-  height: 100%;
-}
-
-.background {
-  background-image: url("../IMAGES/jan-antonin-kolar-HB26V8IRL2k-unsplash.jpg");
-  background-size: cover;
-  height: 100vh;
-  width: 100vh;
-  position: relative;
-  top: 0;
-  left: 0;
-  z-index: 1;
-  
-}
-
-.tarjeta1 
-{ display: flex;
-  position: absolute;
-  top: 60px;
-  left: 80px;
-  flex-direction: column;
-  justify-content: stretch;
-  align-items: center;
-  z-index: 2;
-}
-
-
-
-@media screen and (min-width: 768px) {
-  body {  background-color: #000000; }
-  h1 {font-size: 90px;}
-  }
-  
-
-
+h1 {
+  color: beige; }
